fix scrollbar behaviour

--- a/src/styles.css
+++ b/src/styles.css
@@ -32,14 +32,9 @@
   padding: 0px;
 }
 
-html {
-  overflow-y: overlay;
-}
-
 a {
   text-decoration: none;
 }
-
 
 
 /* -- SCROLL BAR --*/
